# rachel_sdk_simulator

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  fetch_submodules.sh  main.cpp
rachel/: rachel.cpp  rachel.h
rachel/apps/: apps.h
rachel/apps/app_blegamepad/: app_blegamepad.cpp  app_blegamepad.h
rachel/apps/app_emulator/: app_emulator.h
rachel/apps/app_gb_emulator/: app_gb_emulator.cpp  app_gb_emulator.h
rachel/apps/app_gbemulator/utils/gb_emulator/: gb_emulator.hpp
rachel/apps/app_genshin/: app_genshin.cpp
rachel/apps/app_nes_emulator/: app_nes_emulator.cpp  app_nes_emulator.h
rachel/apps/app_nes_emulator/simple_nes/include/: Emulator.h  PPU.h  VirtualScreen.h
rachel/apps/app_nes_emulator/simple_nes/src/: CPU.cpp  Emulator.cpp  PPU.cpp  VirtualScreen.cpp
rachel/apps/app_nofrendo/: app_nofrendo.cpp
rachel/apps/app_nofrendo/nofrendo/: bitmap.c  bitmap.h  config.c  event.c  event.h  gui.c  gui.h  gui_elem.c  intro.c  intro.h  log.c  memguard.c  nofconfig.h  nofrendo.c  noftypes.h  osd.h  pcx.c  pcx.h  vid_drv.c  vid_drv.h
rachel/apps/app_nofrendo/nofrendo-esp32/: osd.c  psxcontroller.c  render.cpp  spi_lcd.c  video_audio.c
rachel/apps/app_nofrendo/nofrendo/cpu/: dis6502.c  nes6502.c  nes6502.h
rachel/apps/app_nofrendo/nofrendo/libsnss/: libsnss.c
rachel/apps/app_nofrendo/nofrendo/mappers/: map000.c  map001.c  map002.c  map003.c  map004.c  map005.c  map007.c  map008.c  map009.c  map011.c  map015.c  map016.c  map018.c  map019.c  map024.c  map032.c  map033.c  map034.c  map040.c  map041.c  map042.c  map046.c  map050.c  map064.c  map065.c  map070.c  map073.c  map075.c  map078.c  map085.c  map087.c  map093.c  map099.c  map160.c  map229.c  (+1 more)
rachel/apps/app_power/: app_power.cpp  app_power.h
rachel/apps/app_raylib_games/: app_raylib_games.cpp
rachel/apps/app_raylib_games/games/: arkanoid.cpp  games.h
rachel/apps/app_raylib_games/raylib/: raylib.cpp  raylib.h
rachel/apps/app_raylibgames/games/: arkanoid.cpp
rachel/apps/app_raylibgames/raylib/: raylib.cpp  raylib.h
rachel/apps/app_screencast/: app_screencast.cpp
rachel/apps/app_settings/: app_settings.h
rachel/apps/app_settings/pages/: page_display.cpp  page_index.cpp
rachel/apps/app_template/: app_template.cpp  app_template.h
rachel/apps/assets/theme/: theme.h
rachel/apps/launcher/: launcher.cpp  launcher.h
rachel/apps/launcher/assets/: launcher_bottom_panel.h
rachel/apps/launcher/view/: menu.cpp  menu_render_callback.hpp
rachel/apps/tools/: app_generator.py
rachel/hal/: hal.cpp  hal.h  hal_sim.hpp
rachel/hal/hal_simulator/: hal_simulator.hpp
(+35 files in other folders)
